# Numbers

./: .codacy.yml  .gitignore  .gitkeep  .markdownlint.json  .pre-commit-config.yaml  .travis.yml  Arithmetic.cs  ArithmeticExtensions.cs  ArithmeticHelpers.cs  ArithmeticHelpers[T].cs  Arithmetic[T].cs  Bit.cs  BitExtensions.cs  Bit[T].cs  BitwiseHelpers.cs  BitwiseHelpers[T].cs  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Integer.cs  Integer[T].cs  Math.cs  MathExtensions.cs  MathHelpers.cs  MathHelpers[T].cs  Math[T].cs  Platform.Numbers.csproj  Platform.Numbers.sln  README.html  README.md  format-document.sh  generate-pdf.sh  index.html  index.json  manifest.json  publish-docs.sh  test_mathhelpers.cs  toc.html  xrefmap.yml
Platform.Numbers/: Arithmetic.cs  Arithmetic[T].cs  Bit.cs  BitExtensions.cs  Bit[T].cs  Integer.cs  Integer[T].cs  Math.cs  Math[T].cs  Platform.Numbers.csproj
Platform.Numbers.Benchmarks/: ArithmeticBenchmarks.cs  IntegerBenchmarks.cs  Program.cs
Platform.Numbers.Tests/: ArithmeticExtensionsTests.cs  ArithmeticTests.cs  BitTests.cs  IntegerTests.cs  MathExtensionsTests.cs  MathTests.cs  Platform.Numbers.Tests.csproj  SystemTests.cs
api/: Platform.Numbers.Arithmetic-1.html  Platform.Numbers.Arithmetic.html  Platform.Numbers.ArithmeticExtensions.html  Platform.Numbers.Bit-1.html  Platform.Numbers.Bit.html  Platform.Numbers.BitwiseExtensions.html  Platform.Numbers.Integer-1.html  Platform.Numbers.Integer.html  Platform.Numbers.Math-1.html  Platform.Numbers.Math.html  Platform.Numbers.MathExtensions.html  Platform.Numbers.Tests.ArithmeticExtensionsTests.html  Platform.Numbers.Tests.ArithmeticTests.html  Platform.Numbers.Tests.BitTests.html  Platform.Numbers.Tests.MathExtensionsTests.html  Platform.Numbers.Tests.MathTests.html  Platform.Numbers.Tests.SystemTests.html  Platform.Numbers.Tests.html  Platform.Numbers.html  Platform.Tests.Numbers.ArithmeticExtensionsTests.html  Platform.Tests.Numbers.ArithmeticTests.html  Platform.Tests.Numbers.BitTests.html  Platform.Tests.Numbers.MathExtensionsTests.html  Platform.Tests.Numbers.MathTests.html  Platform.Tests.Numbers.html  toc.html
changelog.d/: 20251228_024300_100_percent_test_coverage.md  20251228_053006_migrate_to_stable_rust.md  20260321_000000_fix_license.md  20260321_120000_fix_cargo_publish.md  20260321_220000_migrate_cicd_to_rust_scripts.md  20260321_readme_fix.md  20260322_000000_fix_unused_import_get_bump_type.md  20260322_112614_fix_regex_lookahead_create_github_release.md  20260323_rename_traits.md  20260411_000000_edition_2024_audit.md  20260414_000000_add_tryfrom_tryinto_from_byte_to_linkreference.md  20260414_000000_add_tryfrom_tryinto_funty_to_linkreference.md  20260414_100000_add_wrapping_arithmetic_to_linkreference.md  20260414_131600_add_likely_benchmarks.md  README.md
cpp/: CMakeLists.txt  README.md  conanfile.txt
cpp/Platform.Numbers/: Arithmetic.h  ArithmeticExtensions.h  Arithmetic[T].h  Bit.h  BitExtensions.h  Bit[T].h  Math.h  MathExtensions.h  Math[T].h  Platform.Numbers.TemplateLibrary.nuspec  Platform.Numbers.h
cpp/Platform.Numbers.Benchmarks/: ArithmeticBenchmarks.cpp  MathBenchmarks.cpp  Program.cpp
cpp/Platform.Numbers.Tests/: AllTests.cpp  ArithmeticExtensionsTests.cpp  ArithmeticTests.cpp  BitTests.cpp  MathExtensionsTests.cpp  MathTests.cpp
csharp/: Auxiliary template.txt  (+8 more)
rust/: Cargo.toml  README.md  crates.js  help.html  settings.html  src-files.js
rust/benches/: math_benchmarks.rs
rust/platform_num/: all.html  index.html  sidebar-items.js  trait.AsPrimitive.html  trait.FromPrimitive.html  trait.LinkReference.html  trait.MaxValue.html  trait.Number.html  trait.PrimInt.html  trait.Signed.html  trait.SignedNumber.html  trait.ToPrimitive.html  trait.ToSigned.html  trait.Unsigned.html  trait.WrappingAdd.html  trait.WrappingArithmetic.html  trait.WrappingMul.html  trait.WrappingNeg.html  trait.WrappingShl.html  trait.WrappingShr.html  trait.WrappingSub.html
rust/platform_num/imp/: trait.LinkReference.html  trait.MaxValue.html  trait.Number.html  trait.SignedNumber.html  trait.ToSigned.html  trait.WrappingArithmetic.html
rust/search.index/: 08fe397c10d0.js  0d8119817963.js  14a0ad74ce5c.js  2f82e3adbad4.js  42dceb635a5c.js  6994b8e59993.js  7f4a2cc6c51c.js  root.js
rust/search.index/crateNames/: e120e43246b3.js
rust/search.index/desc/: 0aa0c7030a33.js  5ee4d7900769.js  8d0e706a72dd.js
rust/search.index/entry/: 13511dd44ced.js  42eb0c671fea.js  bb6903d426ae.js
rust/search.index/function/: 1a6b200da724.js  a95f9456b0e6.js  e15543a81502.js
rust/search.index/generic_inverted_index/: 4046e8292e6d.js  836f735c4395.js  8efcb756fd81.js
rust/search.index/name/: 195e5bc791d6.js  4808d4bd9015.js  a86465b2ef4d.js
rust/search.index/normalizedName/: 42309d1a920a.js  c050a50ebfc3.js  ec71e63170b7.js
rust/search.index/path/: 015c32ccdd98.js  2f9e17038eff.js  34dbf78cb27e.js
rust/search.index/type/: 04802bbcca6d.js  9e6a42e6836e.js  f142794e706f.js
rust/src/: imp.rs  lib.rs  math.rs
rust/src/platform_num/: imp.rs.html  lib.rs.html
rust/tests/: traits.rs
rust/trait.impl/platform_num/imp/: trait.WrappingArithmetic.js
(+75 files in other folders)
