[package]
name = "platform-num"
version = "0.1.0-aplha.1"
edition = "2018"
authors = ["uselesssgoddess", "Linksplatform Team <linksplatformtechnologies@gmail.com>"]
license = "LGPL-3.0"
repository = "https://github.com/linksplatform/platform-rs"
homepage = "https://github.com/linksplatform/platform-rs"
description = """
Numbers for linksplatform
"""

[dependencies]
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "math_benchmarks"
harness = false
